--- a/learn/foundations/1. about_next.js.md
+++ b/learn/foundations/1. about_next.js.md
@@ -5,16 +5,16 @@ To effectively use Next.js, it helps to be familiar to be JS, React and Web deve
 
 효과적으로 next.js를 사용하기 위해서는 Javascript, React 그리고 웹 개발의 개념과 친숙해지는 것이 도움이 된다. 하지만 JS와 React는 광범위한 주제이다. Next.js를 배울 준비가 되었는지 어떻게 알 수 있을까?
 
-Welcome to the Next.js foundations course. This beginner-friendly, example led course will guides you through the prerequisite knowledge of next.js. It start with js application. then migrating to the react and next.js
+Welcome to the Next.js foundations course. This beginner-friendly, example led course will guides you through the prerequisite knowledge for next.js. You will build simple project step-by-step; starting with a JS application, then migrating it to react and next.js
 
 Next.js foundation 코스에 온 것을 환영한다. 이 초심자 위주와 예제 주도적인 과정은 Next.js를 위한 사전 지식을 안내할 것이다. JS 어플리케이션에서 시작해 React와 Next.js로 마이그레이션하며 간단한 프로젝트를 단계별로 만들 것이다.
 
-Each Section is base on previous one, you can choose one to start section on what you already know.
+Each Section builds on previous one, so you can choose where to start depending on what you already know.
 
 각 섹션은 이전 섹션의 예제를 기반으로 하기 때문에 이미 알고 있는 부분에 따라 선택해 시작할 수 있다.
 
 
-> This tutorial assumes you already know knowledge of HTML, CSS and JS. If you're familiar with React, you can skip to the Getting Started with Next.js section or Create your first Next.js app.
+> This tutorial assumes knowledge of HTML, CSS and JS and no knowledge of react. If you're already familiar with React, you can skip to the Getting Started with Next.js section or Create your first Next.js app.
 
 
 > 이 튜토리얼 과정은 HTML, CSS, JS 그리고 React에 대한 지식이 있다는 가정하에 진행됩니다. 만약 React에 익숙하다면 [Getting Started with Next.js]() 섹션이나 [Create your first Next.js app]() 으로 이동해도 좋습니다.
